# brightspace-cli

./: .gitignore  Cargo.toml  README.md  RELEASES.md
.github/workflows/: release.yml
design/: concept.md
samples/: chem-quiz.qmd  code-quiz.qmd  image-quiz.qmd  java-ii-quiz.qmd  math-quiz.qmd  music-quiz.qmd  rust-quiz.qmd  valid-quiz.qmd  working-quiz.qmd
src/: api.rs  auth.rs  config.rs  main.rs
src/qti/: generator.rs  lexer.rs  mod.rs  model.rs  parser.rs
